--- a/package.json
+++ b/package.json
@@ -29,12 +29,16 @@
     "babel-loader": "^8.0.6",
     "concurrently": "^5.0.1",
     "express": "^4.17.1",
+    "hoist-non-react-statics": "^3.3.1",
     "http-proxy-middleware": "^0.20.0",
+    "puppeteer": "^2.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.4",
-    "redux-thunk": "^2.3.0"
-  }
+    "redux-thunk": "^2.3.0",
+    "request": "^2.88.0"
+  },
+  "proxy": "https://extension-ms.juejin.im/resources/gold"
 }
